client feedback and bug fixes

--- a/Health37/Info.plist
+++ b/Health37/Info.plist
@@ -51,6 +51,8 @@
 	<string>Health37</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>tel</string>
